add dashboard.html to index

--- a/frontend/layout/sidebar.html
+++ b/frontend/layout/sidebar.html
@@ -7,7 +7,7 @@
                             <h3>اصلی</h3>
                         </li>
                         <li class="slide">
-                            <a class="side-menu__item has-link" data-bs-toggle="slide" href="index.html"><i
+                            <a class="side-menu__item has-link" data-bs-toggle="slide" href="/"><i
                                     class="side-menu__icon fe fe-home"></i><span class="side-menu__label">داشبورد</span></a>
                         </li>
                         <li class="sub-category">
