--- a/frontend/layout/base.html
+++ b/frontend/layout/base.html
@@ -9,24 +9,25 @@
     <title>{% block title %}{% endblock %}</title>
     
         <!-- BOOTSTRAP CSS -->
-        <link href="{% static '' %}plugins/bootstrap/css/bootstrap.min.css" id="style" rel="stylesheet"/>
+    <!-- BOOTSTRAP CSS -->
+    <link href="{% static '' %}/plugins/bootstrap/css/bootstrap.min.css" id="style" rel="stylesheet"/>
 
-        <!-- STYLE CSS -->
-        <link href="{% static '' %}css/style.css" rel="stylesheet"/>
-        <link href="{% static '' %}css/plugins.css" rel="stylesheet"/>
-        <link href="{% static '' %}css/dark-style.css" rel="stylesheet"/>
-        <link href="{% static '' %}css/transparent-style.css" rel="stylesheet">
-        <link href="{% static '' %}css/skin-modes.css" rel="stylesheet"/>
-    
-        <!--- FONT-ICONS CSS -->
-        <link href="{% static '' %}css/icons.css" rel="stylesheet"/>
-    
-        <!-- COLOR SKIN CSS -->
-        <link href="{% static '' %}switcher/css/switcher.css" rel="stylesheet"/>
-        <link href="{% static '' %}switcher/demo.css" rel="stylesheet"/>
-    
-        <link href="{% static '' %}fonts/styles-fa-num/iran-yekan.css" id="fonts" rel="stylesheet">
-        <link href="{% static '' %}css/rtl.css" rel="stylesheet"/>
+    <!-- STYLE CSS -->
+    <link href="{% static '' %}/css/style.css" rel="stylesheet"/>
+    <link href="{% static '' %}/css/plugins.css" rel="stylesheet"/>
+    <link href="{% static '' %}/css/dark-style.css" rel="stylesheet"/>
+    <link href="{% static '' %}/css/transparent-style.css" rel="stylesheet">
+    <link href="{% static '' %}/css/skin-modes.css" rel="stylesheet"/>
+
+    <!--- FONT-ICONS CSS -->
+    <link href="{% static '' %}/css/icons.css" rel="stylesheet"/>
+
+    <!-- COLOR SKIN CSS -->
+    <link href="{% static '' %}/switcher/css/switcher.css" rel="stylesheet"/>
+    <link href="{% static '' %}/switcher/demo.css" rel="stylesheet"/>
+    <link href="{% static '' %}/fonts/styles-fa-num/iran-yekan.css" id="fonts" rel="stylesheet">
+    <link href="{% static '' %}/css/rtl.css" rel="stylesheet"/>
+
 <head>
 
 {% block head %}
