--- a/frontend/layout/sidebar.html
+++ b/frontend/layout/sidebar.html
@@ -11,34 +11,16 @@
                                     class="side-menu__icon fe fe-home"></i><span class="side-menu__label">داشبورد</span></a>
                         </li>
                         <li class="sub-category">
-                            <h3> کیت UI</h3>
+                            <h3>پیمایش سریع</h3>
                         </li>
                         <li class="slide">
                             <a class="side-menu__item" data-bs-toggle="slide" href="javascript:void(0)"><i
                                     class="side-menu__icon fe fe-slack"></i><span
-                                    class="side-menu__label">برنامه ها</span><i
+                                    class="side-menu__label">مدیریت انبار</span><i
                                     class="angle fe fe-chevron-right"></i></a>
                             <ul class="slide-menu">
-                                <li class="side-menu-label1"><a href="javascript:void(0)">برنامه‌ها</a></li>
+                                <li class="side-menu-label1"><a href="javascript:void(0)">مدیریت انبار</a></li>
                                 <li><a class="slide-item" href="cards.html"> کارت</a></li>
-                                <li><a class="slide-item" href="calendar.html"> تقویم پیش‌فرض</a></li>
-                                <li><a class="slide-item" href="calendar2.html"> تقویم کامل</a></li>
-                                <li><a class="slide-item" href="chat.html"> گپ</a></li>
-                                <li><a class="slide-item" href="notify.html"> اعلان‌ها</a></li>
-                                <li><a class="slide-item" href="sweetalert.html"> سویت آلرت</a></li>
-                                <li><a class="slide-item" href="rangeslider.html"> نوار بازه محدوده</a></li>
-                                <li><a class="slide-item" href="scroll.html"> نوار پیمایش محتوا</a></li>
-                                <li><a class="slide-item" href="loaders.html"> لودرها</a></li>
-                                <li><a class="slide-item" href="counters.html"> شمارنده</a></li>
-                                <li><a class="slide-item" href="rating.html"> رتبه‌بندی</a></li>
-                                <li><a class="slide-item" href="timeline.html"> تایم لاین</a></li>
-                                <li><a class="slide-item" href="treeview.html"> نمای درختی</a></li>
-                                <li><a class="slide-item" href="chart.html"> نمودارها</a></li>
-                                <li><a class="slide-item" href="footers.html"> پاورقی</a></li>
-                                <li><a class="slide-item" href="users-list.html"> فهرست کاربران</a></li>
-                                <li><a class="slide-item" href="search.html">جستجو</a></li>
-                                <li><a class="slide-item" href="crypto-currencies.html"> ارزهای رمزنگاری شده</a></li>
-                                <li><a class="slide-item" href="widgets.html"> ابزارک‌ها</a></li>
 
                             </ul>
                         </li>
