--- a/frontend/layout/sidebar.html
+++ b/frontend/layout/sidebar.html
@@ -36,6 +36,8 @@
                                 <li><a class="slide-item" href="/">ایجاد انبار</a></li>
                                 <li><a class="slide-item" href="/">فهرست دسته بندی انبار ها</a></li>
                                 <li><a class="slide-item" href="/">ایجاد دسته بندی انبار</a></li>
+                                <li><a class="slide-item" href="/">فهرست انبار دار ها</a></li>
+                                <li><a class="slide-item" href="/">تعریف انبار دار جدید</a></li>
                             </ul>
                         </li>
                         <li class="slide">
@@ -69,10 +71,12 @@
                                     class="angle fe fe-chevron-right"></i></a>
                             <ul class="slide-menu">
                                 <li class="side-menu-label1"><a href="javascript:void(0)">خدمات پرسنلی</a></li>
-                                <li><a class="slide-item" href="/">فهرست پرسنل سازمان</a></li>
-                                <li><a class="slide-item" href="/">تعریف پرسنل جدید</a></li>
                                 <li><a class="slide-item" href="/">محاسبه راندمان کاری پرسنل</a></li>
                                 <li><a class="slide-item" href="/">پرداختی پرسنل</a></li>
+                                <li><a class="slide-item" href="/">فهرست پرسنل سازمان</a></li>
+                                <li><a class="slide-item" href="/">تعریف پرسنل جدید</a></li>
+                                <li><a class="slide-item" href="/">فهرست دپارتمان ها</a></li>
+                                <li><a class="slide-item" href="/">تعریف دپارتمان جدید</a></li>
                             </ul>
                         </li>
                     </ul>
