--- a/frontend/templates/dashboard/dashboard.html
+++ b/frontend/templates/dashboard/dashboard.html
@@ -511,8 +511,8 @@
                                             class="angle fe fe-chevron-right"></i></a>
                                     <ul class="slide-menu">
                                         <li class="side-menu-label1"><a href="javascript:void(0)">مدیریت انبار</a></li>
-                                        <li><a class="slide-item" href="../empty.html">فهرست انبار ها</a></li>
-                                        <li><a class="slide-item" href="../empty.html">ایجاد انبار</a></li>
+                                        <li><a class="slide-item" href="../inventory/inventory_list.html">فهرست انبار ها</a></li>
+                                        <li><a class="slide-item" href="../inventory/add_inventory.html">ایجاد انبار</a></li>
                                         <li><a class="slide-item" href="../empty.html">فهرست دسته بندی انبار ها</a></li>
                                         <li><a class="slide-item" href="../empty.html">ایجاد دسته بندی انبار</a></li>
                                         <li><a class="slide-item" href="../empty.html">فهرست انبار دار ها</a></li>
